commit for common project from LAPTOP-7KQRMTC0

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2628,6 +2628,9 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("ui_add_readme") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/readme.png' title='"+s+"'/>";
 	  }
+	if(s.indexOf("ui_nxt.run") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/next-step.png' title='"+s+"'/>";
+	  }
 
 
 }
