commit for common project from LAPTOP-7KQRMTC0

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2429,6 +2429,9 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("path_to_clipboard") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/copy-path-to-clipboard.png' title='"+s+"'/>";
 	  }
+	if(s.indexOf("path_cygwin_to_clipboard") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/copy-path-cyg-to-clipboard.png' title='"+s+"'/>";
+	  }
 	if(s.indexOf("path_url_to_clipboard") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/copy-path-url-to-clipboard.png' title='"+s+"'/>";
 	  }
