commit for common project from WIN7-PC

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2769,14 +2769,11 @@ echo("</script>\n");
 
 
 <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/permalinux/mntFiles.rn");  return false;'><img src="/doc/images/text.png" title="mntFiles.rn"/></a>&nbsp; 
-<!--a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/common/open-command-prompt-here.html");  return false;'><img src="/doc/images/text.png" title="open-command-prompt-here.html"/></a-->&nbsp; 
 <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/open-command-prompt-here.html");  return false;'><img src="/doc/images/text.png" title="open-command-prompt-here.html"/></a>&nbsp; 
-<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/downloadfile.php");  return false;'><img src="/doc/images/text.png" title="downloadfile.php"/></a>&nbsp; 
 <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/downloadfile.php");  return false;'><img src="/doc/images/text.png" title="downloadfile.php"/></a>&nbsp; 
 <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/instantedithead.js");  return false;'><img src="/doc/images/text.png" title="instantedithead.js"/></a>&nbsp; 
 <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/updatehead.php");  return false;'><img src="/doc/images/text.png" title="updatehead.php"/></a>&nbsp; 
-<!--a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/viewfile/view.php");  return false;'><img src="/doc/images/text.png" title="view.php"/></a>&nbsp; 
-<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/viewfile/viewdos.php");  return false;'><img src="/doc/images/text.png" title="viewdos.php"/></a-->&nbsp; 
+<a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/viewfile/viewdos.php");  return false;'><img src="/doc/images/text.png" title="viewdos.php"/></a>&nbsp; 
 <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/write_ckfile.php");  return false;'><img src="/doc/images/text.png" title="write_ckfile.php"/></a>&nbsp; 
 <a href="#" onclick='openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder/", "editor", "/doc/files/common/psexec.php");  return false;'><img src="/doc/images/text.png" title="psexec.php"/></a>&nbsp; 
 <iframe id="other" src="/doc/files/common/othersites.php?urldir=<?php echo $urldir; ?>" />
