commit for common project from LAPTOP-7KQRMTC0

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2620,23 +2620,29 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("ui_archive.run") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/archive48.png' title='"+s+"'/>";
 	  }
-	if(s.indexOf("ui_reset_processor.run") > -1) {
+	if(s.indexOf("reset_processor.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/Reset_button48.png' title='"+s+"'/>";
 	  }
-	if(s.indexOf("ui_open_jtagterminal") > -1) {
+	if(s.indexOf("open_jtagterminal_debug") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/jtagterminal.png' title='"+s+"'/>";
 	  }
-	if(s.indexOf("ui_resume.run") > -1) {
+	if(s.indexOf("resume.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/media-play-resume.png' title='"+s+"'/>";
 	  }
-	if(s.indexOf("ui_suspend.run") > -1) {
+	if(s.indexOf("suspend.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/media-play-pause.png' title='"+s+"'/>";
 	  }
 	if(s.indexOf("ui_add_readme") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/readme.png' title='"+s+"'/>";
 	  }
-	if(s.indexOf("ui_nxt.run") > -1) {
+	if(s.indexOf("nxt.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/next-step.png' title='"+s+"'/>";
+	  }
+	if(s.indexOf("stpout.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/ret.png' title='"+s+"'/>";
+	  }
+	if(s.indexOf("dis.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/asm.png' title='"+s+"'/>";
 	  }
 
 
