commit for common project from LAPTOP-7KQRMTC0

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2644,6 +2644,9 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("dis.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/asm.png' title='"+s+"'/>";
 	  }
+	if(s.indexOf("open_google_drive") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/Google-Drive-48.png' title='"+s+"'/>";
+	  }
 
 
 }
