commit for common project from LAPTOP-7KQRMTC0

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -1327,6 +1327,7 @@ alert(  'current : ' + window.name
       + ' \n$_SERVER[REQUEST_URI] : <?php echo $_SERVER[REQUEST_URI]?>'
       + ' \n$_GET["reqfname"] : <?php echo $_SERVER["reqfname"]?> (.htaccess)'
       + ' \n$_GET["requri"] : <?php echo $_SERVER["requri"]?> (.htaccess)'
+      + ' \nserver IP : <?php echo $_SERVER['SERVER_ADDR']?>'
 	  //
       + ' \nwindow.screen.availHeight : ' + window.screen.availHeight
       + ' \nwindow.screen.availWidth : ' + window.screen.availWidth
