--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -1,6 +1,7 @@
 <?php
 // detect OS on client
 $link =  "//$_SERVER[HTTP_HOST]$_SERVER[REQUEST_URI]";
+$linkip =  "//$_SERVER[SERVER_ADDR]$_SERVER[REQUEST_URI]";
 //   //mlerman-lap/doc/files/Engineering/ENVIRONMENT/NODE/fill_sd_ajax/open-command-prompt-here.html
 $escaped_link = htmlspecialchars($link, ENT_QUOTES, 'UTF-8');
 $pos=strpos($escaped_link,"/doc/files");
@@ -1215,7 +1216,7 @@ getFileFromServer('/local/recentfirst.php', function(text){
 }
 </script>
 
-<a href="#view"><img src="/doc/images/eye.gif"/></a>&nbsp;
+<a href="http://<?php echo $linkip; ?>"><img src="/doc/images/adresse-ip.png"/></a>&nbsp;
 <?php
 if ($icon_run!="") {
   echo "&nbsp;".$icon_run."&nbsp;";
