commit for env_var_wrapper project from WIN7-PC

--- a/Engineering/ENVIRONMENT/PHP_SERVER/env_var_wrapper/entries.html
+++ b/Engineering/ENVIRONMENT/PHP_SERVER/env_var_wrapper/entries.html
@@ -1,10 +1,1 @@
-<label>un</label>  <span id="un" class="editText"></span><hr/>
-<label>deux</label>  <span id="deux" class="editText"></span><hr/>
-<label>trois</label>  <span id="trois" class="editText"></span><hr/>
-<label>quatre</label>  <span id="quatre" class="editText"></span><hr/>
-
-<label>toto</label>  <span id="toto" class="editText"></span><hr/>
-<label>toto</label>  <span id="toto" class="editText"></span><hr/>
-<label>toto</label>  <span id="toto" class="editText"></span><hr/>
-<label>toto</label>  <span id="toto" class="editText"></span><hr/>
-<label></label>  <span id="" class="editText"></span><hr/>
+<a href="index.php?delaction=1&name=toto"><img src="/doc/images/delete.png"></a>&nbsp;<label>toto</label>  <span id="toto" class="editText"></span><hr/>
