--- a/Engineering/ENVIRONMENT/PHP_SERVER/env_var_wrapper/entries.html
+++ b/Engineering/ENVIRONMENT/PHP_SERVER/env_var_wrapper/entries.html
@@ -1,1 +1,2 @@
-<a href="index.php?delaction=1&name=toto"><img src="/doc/images/delete.png"></a>&nbsp;<label>toto</label>  <span id="toto" class="editText"></span><hr/>
+<a href="index.php?delaction=1&name=bebe"><img src="/doc/images/delete.png"></a>&nbsp;<label>bebe</label>  <span id="bebe" class="editText"></span><hr/>
+<a href="index.php?delaction=1&name=tonton"><img src="/doc/images/delete.png"></a>&nbsp;<label>tonton</label>  <span id="tonton" class="editText"></span><hr/>
