commit for common project from XSJMIKHAELL30

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2632,6 +2632,9 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("open_jtagterminal_debug") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/jtagterminal.png' title='"+s+"'/>";
 	  }
+	if(s.indexOf("ui_XSCT_Xilinx_Software_command_line_tool") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/xsctterminal.png' title='"+s+"'/>";
+	  }
 	if(s.indexOf("resume.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/media-play-resume.png' title='"+s+"'/>";
 	  }
