--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2656,6 +2656,9 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("open_google_drive") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/Google-Drive-48.png' title='"+s+"'/>";
 	  }
+	if(s.indexOf("edit_environment_variable.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/variable.png' title='"+s+"'/>";
+	  }
 
 
 }
