commit for common project from LAPTOP-7KQRMTC0

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2659,6 +2659,15 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("edit_environment_variable.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/variable.png' title='"+s+"'/>";
 	  }
+	if(s.indexOf("hw_server.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/hw.png' title='"+s+"'/>";
+	  }
+	if(s.indexOf("vivado.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/vivado.png' title='"+s+"'/>";
+	  }
+	if(s.indexOf("vivado_tcl.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/vivado_tcl.png' title='"+s+"'/>";
+	  }
 
 
 }
