commit for xfer project from XSJMIKHAELL30

--- a/xfer/elfinder.html
+++ b/xfer/elfinder.html
@@ -247,7 +247,7 @@ a.onreadystatechange = function() {
 		&nbsp;|&nbsp;<a href="/doc/files/ThisPC/install_uniserver/open-command-prompt-here.html" target="_blank">install_uniserver</a>&nbsp;|&nbsp;
 <script>
 
-getFileFromServer('/local/allsites.php', 
+getFileFromServer('/doc/files/common/allsites.php', 
                     function(text){ 
 						var splitted = text.split("\n"); 
 						var str="";
