commit for common project from LAPTOP-7KQRMTC0

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2328,6 +2328,9 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("krusaderHere.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/krusader.png' title='"+s+"'/>";
 	  }
+	if(s.indexOf("krusaderRoot.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/krusaderRoot.png' title='"+s+"'/>";
+	  }
 	if(s.indexOf("krusaderHereDown.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/krusader-down.png' title='"+s+"'/>";
 	  }
