commit for common project from WIN7-PC

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2343,8 +2343,11 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("curl_remote_dir") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/curl-remote-dir.png' title='"+s+"'/>";
 	  }
-	if(s.indexOf("CygwinConsole") > -1) {
+	if(s.indexOf("startCygwinConsole") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/cygwin.png' title='"+s+"'/>";
+	  }
+	if(s.indexOf("adminCygwinConsole") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/admincygwin.png' title='"+s+"'/>";
 	  }
 	if(s.indexOf("grepWin") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/grepWin.png' title='"+s+"'/>";
