commit for common project from WIN7-PC

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2595,7 +2595,7 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("ui_bin_edit.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/binedit.png' title='"+s+"'/>";
 	  }
-	if(s.indexOf("ui_convert_dos_to_linux.r") > -1) {
+	if(s.indexOf("convert_dos_to_linux.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/win2lin.png' title='"+s+"'/>";
 	  }
 	if(s.indexOf("ui_convert_linux_to_dos.r") > -1) {
