commit for common project from WIN7-PC

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2592,7 +2592,7 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("ui_jotty.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/malware.png' title='"+s+"'/>";
 	  }
-	if(s.indexOf("ui_bin_edit.r") > -1) {
+	if(s.indexOf("bin_edit.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/binedit.png' title='"+s+"'/>";
 	  }
 	if(s.indexOf("convert_dos_to_linux.r") > -1) {
