--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2676,6 +2676,9 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("vivado_tcl.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/vivado_tcl.png' title='"+s+"'/>";
 	  }
+	if(s.indexOf("launch_script.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/script.png' title='"+s+"'/>";
+	  }
 
 
 }
