commit for common project from LAPTOP-7KQRMTC0

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2340,6 +2340,9 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("mntFiles") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/mnt.jpg' title='"+s+"'/>";
 	  }
+	if(s.indexOf("umntFiles") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/images/umnt.jpg' title='"+s+"'/>";
+	  }
 	if(s.indexOf("usbview") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/images/usb.jpg' title='"+s+"'/>";
 	  }
