commit for common project from WIN7-PC

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2687,6 +2687,9 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("showFiles.rn") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/ln-files.png' title='"+s+"'/>";
 	  }
+	if(s.indexOf("share_files.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/sharedir.png' title='"+s+"'/>";
+	  }
 
 
 }
