--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -292,7 +292,7 @@ iframe {
 
 #fixed-div {
     position: fixed;
-    top: 15em;
+    top: 5em;
     right: 1em;
 }
 
@@ -2249,9 +2249,17 @@ if($CurrOS!="Linux")
 }
 ?>
 <?php
-$dirp="perma";
-$file="ui_copy_path_to_clipboard.run";
-echo '&nbsp;<a class="winlink" href="/doc/files/common/downloadfile.php?fname='.$file.'&targetdir='.realpath($dir).'&targetfile='.$prjname.'&urldir='.$urldir.'&host='.$host.'&perma='.realpath($dirp).'" '.$onmouseover.'  onclick="this.href=this.href+\'&param1=\'+document.getElementById(\'inpf\').value;" ><img src="/doc/images/clip16.png" title="Copy path to clipboard" /></a><br/><br/>';
+if($CurrOS!="Linux")
+{
+	$dirp="perma";
+	$file="ui_copy_path_to_clipboard.run";
+	echo '&nbsp;<a class="winlink" href="/doc/files/common/downloadfile.php?fname='.$file.'&targetdir='.realpath($dir).'&targetfile='.$prjname.'&urldir='.$urldir.'&host='.$host.'&perma='.realpath($dirp).'" '.$onmouseover.'  onclick="this.href=this.href+\'&param1=\'+document.getElementById(\'inpf\').value;" ><img src="/doc/images/clip16.png" title="Copy path to clipboard" /></a><br/><br/>';
+} else
+{
+	$dirpm="permalinux";
+	$file="copy_path_to_clipboard.rn";
+	echo '<a class="linuxlink" href="/doc/files/common/downloadfile.php?fname='.$file.'&targetdir='.realpath($dirlocal).'&targetfile='.$prjname.'&urldir='.$urldir.'&host='.$host.'&perma='.realpath($dirpm).'"  onmouseover="getFileFromServer('.'\'.'.$file.'\''.', function(text){ show(text, this, -1)});"><img src="/doc/images/clip16.png" title="Copy path to clipboard" /></a><br/><br/>';
+}
 ?>
 <a href="#bottom"><img src="/doc/images/dn.png" title="Scroll all the way down"/></a><br/><br/>
 </div>
