commit for common project from XSJMIKHAELL30

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2360,8 +2360,11 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("krusaderHere.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/krusader.png' title='"+s+"'/>";
 	  }
-	if(s.indexOf("krusaderRoot.r") > -1) {
-	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/krusaderRoot.png' title='"+s+"'/>";
+	if(s.indexOf("krusaderHere.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/krusader.png' title='"+s+"'/>";
+	  }
+	if(s.indexOf("krusader.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/krusader.png' title='"+s+"'/>";
 	  }
 	if(s.indexOf("krusaderHereDown.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/krusader-down.png' title='"+s+"'/>";
