commit for common project from XSJMIKHAELL30

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2732,6 +2732,9 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("vcs_gui.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/vcs.png' title='"+s+"'/>";
 	  }
+	if(s.indexOf("push_files.r") > -1) {
+	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/copyover48.png' title='"+s+"'/>";
+	  }
 
 
 }
