commit for common project from XSJMIKHAELL30

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2623,7 +2623,7 @@ for (i = 0; i < listItemAnchors.length; i++) {
 	if(s.indexOf("powerpoint.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/powerpoint.png' title='"+s+"'/>";
 	  }
-	if(s.indexOf("ui_video_capture_screen.r") > -1) {
+	if(s.indexOf("video_capture_screen.r") > -1) {
 	  listItemAnchors[i].innerHTML="<img src='/doc/files/common/images/video.png' title='"+s+"'/>";
 	  }
 	if(s.indexOf("ui_network_connection_adapter.r") > -1) {
